css: fix bad channels menu buttons and remove more whitespace

--- a/custom.css
+++ b/custom.css
@@ -50,3 +50,20 @@
     border-top: solid 1px #e0e0e0;
     padding-top: 6px;
 }
+.iiJ4W {
+    height: 0.8em;
+    margin: 0 2px;
+    max-height: 0.8em;
+    min-width: 0.8em;
+    width: 0.8em;
+}
+.MhXXcc {
+    line-height: 24px;
+ }
+.gsrV1e {
+    height: 22px;
+    width: 22px;
+}
+.RPExGf {
+    height: 0px;
+ }
